css/custom.css
html {
  height: 100%;
}

body {
  margin: 0;
  height: 100%;
  -webkit-transform-style: preserve-3d;
  -moz-transform-style: preserve-3d;
  transform-style: preserve-3d;
}

#navbar {
  list-style-type: none;
  padding: 0;
  text-align: center;
  height: 10%;
  border-bottom-width: 1px;
  border-bottom-style: dashed;
  border-bottom-color: #CCC;
  position: absolute;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
  margin: 0;
}

#navbar > li {
  position: relative;
  top: 37%;
  display: inline;
  margin: 2em;
}

#navbar > li > a {
  color: #808080;
  text-decoration: none;
  font-size: 1.2em;
  font-family: 'Raleway', sans-serif;
}

#navbar > li > a:hover {
  color: black;
}

#main {
  position: absolute;
  top: 20%;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
  height: 20%;
}

#name {
  -webkit-animation-duration: 1000ms;
  -webkit-animation-delay: 1s;
  -moz-animation-duration: 1000ms;
  -moz-animation-delay: 1s;
  animation-duration: 1000ms;
  animation-delay: 1s;
}

#desc {
  -webkit-animation-duration: 1400ms;
  -moz-animation-duration: 1400ms;
  animation-duration: 1400ms;
}

#links {
  list-style-type: none;
  padding: 0;
}

#links > li {
  display: inline;
}

#links > li > a {
  color: black;
  text-decoration: none;
  font-size: 1.2em;
  font-family: 'Roboto', sans-serif;
  margin: 10px;
}

#links > li > a:hover {
  color: #337ab7;
}

#animate-container {
  -webkit-animation-duration: 1400ms;
  -moz-animation-duration: 1400ms;
  animation-duration: 1400ms;
}

#animate-area {
  position: absolute;
  bottom: 0px;
  width: 100%;
  max-height: 200px;
  height: 33%;
  background-image: url(../img/mountains.png);
  animation: animatedBackground 10s linear infinite;
}

@keyframes animatedBackground {
  from { background-position: 0 0; }
  to { background-position: -485px 0; }
}

.container {
  position: absolute;
  top: 10%;
  height: 90%;
  text-align: center;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
}

.title {
  font-family: 'Raleway', sans-serif;
  font-size: 5.2em;
  margin: 0;
}

.info {
  height: 1.5em;
  font-family: 'Roboto', sans-serif;
  font-size: 1.5em;
}

.profile {
  position: absolute;
  top: 20%;
  width: 35%;
}

.prof-img {
  height: 45%;
  width: 45%;
}

.location {
  font-family: 'Dancing Script', cursive;
  font-size: 1.3em;
}

.bio {
  position: relative;
  top: 20%;
  left: 35%;
  width: 55%;
  text-align: left;
  font-family: 'Open Sans', sans-serif;
  font-size: 1em;
}

i {
  color: black;
  margin-left: 6px;
  margin-right: 6px;
}

.card {
  display: inline-block;
  vertical-align: top;
  height: 250px;
  width: 300px;
  margin: 3%;
}

.active-ln {
  color: #EF3F38 !important;
}

.hidden {
  visibility: hidden;
}

.hvr-grow {
  display: inline-block;
  transform: translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  backface-visibility: hidden;
  -moz-osx-font-smoothing: grayscale;
  transition-duration: 0.3s;
  transition-property: transform;
}

.hvr-grow:hover,
.hvr-grow:focus,
.hvr-grow:active {
  transform: scale(1.2);
}

